--- a/base_static/users/css/idea_detail.css
+++ b/base_static/users/css/idea_detail.css
@@ -8,6 +8,14 @@
     box-shadow: rgba(0, 0, 0, 0.707) 0px 20px 30px -10px;
 }
 
+.idea-title {  
+    white-space: pre-wrap;      /* Webkit */    
+    white-space: -moz-pre-wrap; /* Firefox */     
+    white-space: -pre-wrap;     /* Opera <7 */    
+    white-space: -o-pre-wrap;   /* Opera 7 */     
+    word-wrap: break-word;      /* IE */ 
+ }
+
 .idea-title {
     color: var(--cor-primaria);
     font-size: 2rem;
