--- a/base_static/users/css/ideas_admin.css
+++ b/base_static/users/css/ideas_admin.css
@@ -76,6 +76,9 @@
 .idea-title h4 {
     color: var(--cor-primaria);
     font-size: 1.2rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .all-ideas .idea-title h4 {
